<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/background_dark"
    >


    <Button
        android:id="@+id/my_account"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/add_count"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:theme="@style/AppTheme"
        android:background="#ff5588"
        android:textColor="#fdfffbf9"
        android:textStyle="bold" />

    <Button
        android:layout_width="280dp"
        android:layout_height="150dp"
        android:text="@string/add_help"
        android:id="@+id/my_help"
        android:layout_above="@+id/my_account"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#fdfffbf9"
        android:background="#32ab9f"
        android:textStyle="bold" />

    <Button
        android:layout_width="280dp"
        android:layout_height="150dp"
        android:text="@string/add_prescription"
        android:id="@+id/my_prescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/my_help"
        android:fadingEdge=""
        android:textColor="#fdfffbf9"
        android:background="#009688"
        android:textStyle="bold" />

    <Button
        android:layout_width="280dp"
        android:layout_height="300dp"
        android:text="@string/add_treatement"
        android:id="@+id/my_treatement"
        android:layout_alignBottom="@+id/my_help"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#fdfffbf9"
        android:background="#e39e54"
        android:textStyle="bold" />

    <Button
        android:layout_width="580dp"
        android:layout_height="440dp"
        android:text="@string/add_pharmacy"
        android:id="@+id/my_pharmacy"
        android:layout_above="@+id/my_prescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#fdfffbf9"
        android:background="#afafaf"
        android:textStyle="bold" />

</RelativeLayout>
